# chromium-mcp

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  INSTRUCTION.md  MCP-SERVER.md  MCP_REFACTORING_PLAN.md  README.md  ROADMAP.md  STEALTH.md  STEALTH_HEADLESS.md  TEST_PLAN.md
docs/: MULTI_INSTANCE_CONSENSUS.md
docs/plans/: 2026-03-26-drag-html5-dnd.md
docs/superpowers/plans/: 2026-03-25-unified-locator-system.md
docs/superpowers/specs/: 2026-03-25-unified-locator-system-design.md
logs/e2e/: e2e-test-results.md
patches/: chrome_browser_BUILD.patch  chrome_main_delegate.patch  mcp_switches.patch
scripts/: build.sh  chromium-mcp-client.py  chromium-mcp-daemon.py  chromium-mcp-launcher.py  chromium-mcp-launcher.sh  gcp-build-manager.sh  gcp-build-status.sh  install.sh  run-chromium.sh  test_multiclient.py
src/: BUILD.gn  mcp_launcher.cc  mcp_launcher.h  mcp_server.cc  mcp_server.h  mcp_session.cc  mcp_session.h  mcp_tool_registry.cc  mcp_tool_registry.h  mcp_transport.h  mcp_transport_socket.cc  mcp_transport_socket.h  mcp_transport_stdio.cc  mcp_transport_stdio.h
src/tools/: actionability_checker.cc  actionability_checker.h  bookmark_tool.cc  bookmark_tool.h  box_model_util.cc  box_model_util.h  browser_info_tool.cc  browser_info_tool.h  click_tool.cc  click_tool.h  clipboard_tool.cc  clipboard_tool.h  console_tool.cc  console_tool.h  cookie_tool.cc  cookie_tool.h  coverage_tool.cc  coverage_tool.h  dialog_tool.cc  dialog_tool.h  dom_tool.cc  dom_tool.h  download_tool.cc  download_tool.h  drag_tool.cc  drag_tool.h  element_info_tool.cc  element_info_tool.h  element_locator.cc  element_locator.h  element_tool.cc  element_tool.h  emulation_tool.cc  emulation_tool.h  file_upload_tool.cc  file_upload_tool.h  fill_tool.cc  fill_tool.h  find_tool.cc  find_tool.h  (+36 more)
test/e2e/: test-page.html
